--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@chakra-ui/gatsby-plugin": "^3.1.3",
+    "@chakra-ui/react": "^2.8.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.16.2",
     "gatsby": "^5.12.3",
     "gatsby-plugin-react-helmet": "^6.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "node-fetch": "^2.6.11"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
