--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "lint:constraints": "yarn constraints",
     "lint:dependencies": "depcheck && yarn dedupe",
     "lint:eslint": "eslint . --cache --ext js,ts,tsx",
-    "lint:fix": "yarn lint:eslint --fix && yarn lint:constraints --fix && yarn lint:misc --write && yarn lint:dependencies && yarn lint:changelog",
+    "lint:fix": "yarn lint:eslint --fix && yarn lint:constraints --fix && yarn lint:misc --write && yarn lint:dependencies",
     "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' '**/*.yml' '!.yarnrc.yml' --ignore-path .gitignore --no-error-on-unmatched-pattern"
   },
   "dependencies": {
+    "@chakra-ui/anatomy": "^2.2.0",
     "@chakra-ui/gatsby-plugin": "^3.1.3",
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@metamask/snaps-controllers": "^1.0.2",
+    "@metamask/utils": "^8.1.0",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.12.3",
     "gatsby-plugin-react-helmet": "^6.12.0",
@@ -81,5 +83,11 @@
       "gatsby>lmdb>msgpackr>msgpackr-extract": false,
       "gatsby>memoizee>es5-ext": false
     }
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
+  "repository": {
+    "type": "git"
   }
 }
