--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "lint:dependencies": "depcheck && yarn dedupe",
     "lint:eslint": "eslint . --cache --ext js,ts,tsx",
     "lint:fix": "yarn lint:eslint --fix && yarn lint:constraints --fix && yarn lint:misc --write && yarn lint:dependencies",
-    "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' '**/*.yml' '!.yarnrc.yml' --ignore-path .gitignore --no-error-on-unmatched-pattern"
+    "lint:misc": "prettier '**/*.json' '**/*.md' '!CHANGELOG.md' '**/*.yml' '!.yarnrc.yml' --ignore-path .gitignore --no-error-on-unmatched-pattern",
+    "test": "jest --passWithNoTests && jest-it-up",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@chakra-ui/anatomy": "^2.2.0",
@@ -62,8 +64,11 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.0.3",
-    "prettier-plugin-packagejson": "^2.4.5",
+    "jest": "^28.1.3",
+    "jest-it-up": "^2.0.2",
+    "prettier": "^2.7.1",
+    "prettier-plugin-packagejson": "^2.3.0",
+    "ts-jest": "^28.0.7",
     "typescript": "~4.8.4"
   },
   "packageManager": "yarn@3.6.3",
