--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "crypto-browserify": "^3.12.0",
     "depcheck": "^1.4.3",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
@@ -72,7 +73,8 @@
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.3.0",
     "ts-jest": "^28.0.7",
-    "typescript": "~4.8.4"
+    "typescript": "~4.8.4",
+    "util": "^0.12.5"
   },
   "packageManager": "yarn@3.6.3",
   "engines": {
