--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@lingui/core": "^4.4.2",
     "@lingui/macro": "^4.4.2",
     "@lingui/react": "^4.4.2",
+    "@metamask/providers": "^11.1.1",
     "@metamask/snaps-controllers": "^1.0.2",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.12.3",
