--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git"
   },
   "scripts": {
-    "build": "gatsby build",
+    "build": "yarn lang:compile && gatsby build",
     "clean": "gatsby clean",
     "develop": "gatsby develop",
     "lint": "yarn lint:eslint && yarn lint:constraints && yarn lint:misc --check && yarn lint:dependencies --check",
@@ -23,7 +23,9 @@
     "start": "gatsby develop",
     "test": "jest --passWithNoTests && jest-it-up",
     "test:watch": "jest --watch",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lang:extract": "lingui extract",
+    "lang:compile": "lingui compile"
   },
   "dependencies": {
     "@chakra-ui/anatomy": "^2.2.0",
@@ -31,6 +33,8 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@lingui/macro": "^4.4.2",
+    "@lingui/react": "^4.4.2",
     "@metamask/snaps-controllers": "^1.0.2",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.12.3",
@@ -40,8 +44,11 @@
     "semver": "^7.5.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.11",
     "@lavamoat/allow-scripts": "^2.3.1",
     "@lavamoat/preinstall-always-fail": "^1.0.0",
+    "@lingui/cli": "^4.4.2",
+    "@lingui/format-json": "^4.4.2",
     "@metamask/eslint-config": "^12.0.0",
     "@metamask/eslint-config-browser": "^12.0.0",
     "@metamask/eslint-config-jest": "^12.0.0",
@@ -64,10 +71,14 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-react-helmet": "^6.12.0",
+    "gatsby-theme-i18n": "^3.0.0",
+    "gatsby-theme-i18n-lingui": "^3.0.0",
     "jest": "^28.1.3",
     "jest-it-up": "^2.0.2",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.3.0",
+    "react-helmet": "^6.1.0",
     "ts-jest": "^28.0.7",
     "typescript": "~4.8.4"
   },
@@ -90,7 +101,8 @@
       "gatsby>lmdb": false,
       "gatsby>lmdb>msgpackr>msgpackr-extract": false,
       "gatsby>memoizee>es5-ext": false,
-      "gatsby-plugin-manifest>sharp": true
+      "gatsby-plugin-manifest>sharp": true,
+      "@lingui/cli>esbuild": false
     }
   }
 }
