Fix linting of lingui.config.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "src",
     "gatsby-node.ts",
     "gatsby-config.ts",
-    "gatsby-browser.tsx"
+    "gatsby-browser.tsx",
+    "lingui.config.ts"
   ],
   "exclude": ["./dist/**/*"]
 }
