Extract translations in CI

--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -30,6 +30,8 @@ jobs:
           node-version-file: '.nvmrc'
           cache: 'yarn'
       - run: yarn --immutable --immutable-cache
+      - name: Extract translations
+        run: yarn lang:extract
       - run: yarn build
       - name: Require clean working directory
         shell: bash
