--- a/.depcheckrc.json
+++ b/.depcheckrc.json
@@ -7,7 +7,7 @@
     "@types/*",
     "@yarnpkg/*",
     "clipanion",
-    "gatsby-plugin-react-helmet",
+    "gatsby-plugin-*",
     "prettier-plugin-packagejson",
     "ts-node",
     "typedoc"
