--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gatsby-plugin-manifest": "^5.12.0",
     "jest": "^28.1.3",
     "jest-it-up": "^2.0.2",
     "prettier": "^2.7.1",
@@ -88,7 +89,8 @@
       "gatsby>gatsby-telemetry": false,
       "gatsby>lmdb": false,
       "gatsby>lmdb>msgpackr>msgpackr-extract": false,
-      "gatsby>memoizee>es5-ext": false
+      "gatsby>memoizee>es5-ext": false,
+      "gatsby-plugin-manifest>sharp": true
     }
   }
 }
