Remove Gatsby themes in favour of manual setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "gatsby-node.ts",
     "gatsby-config.ts",
     "gatsby-browser.tsx",
+    "gatsby-ssr.tsx",
     "lingui.config.ts"
   ],
   "exclude": ["./dist/**/*"]
