--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@lingui/core": "^4.4.2",
     "@lingui/macro": "^4.4.2",
     "@lingui/react": "^4.4.2",
     "@metamask/snaps-controllers": "^1.0.2",
@@ -40,7 +41,6 @@
     "node-fetch": "^2.6.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
     "semver": "^7.5.4"
   },
   "devDependencies": {
@@ -71,9 +71,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "gatsby-plugin-manifest": "^5.12.0",
-    "gatsby-plugin-react-helmet": "^6.12.0",
-    "gatsby-theme-i18n": "^3.0.0",
-    "gatsby-theme-i18n-lingui": "^3.0.0",
     "jest": "^28.1.3",
     "jest-it-up": "^2.0.2",
     "node-fetch-cache": "^3.1.3",
