--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@metamask/snaps-controllers": "^1.0.2",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.12.3",
+    "lodash": "^4.17.21",
     "node-fetch": "^2.6.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
