--- a/package.json
+++ b/package.json
@@ -26,6 +26,17 @@
     "test:watch": "jest --watch",
     "typecheck": "tsc --noEmit"
   },
+  "simple-git-hooks": {
+    "pre-commit": "yarn lint-staged && yarn lang:extract && yarn dedupe --check"
+  },
+  "lint-staged": {
+    "*.{js,ts,tsx,jsx}": [
+      "eslint --fix"
+    ],
+    "!(CHANGELOG).{json,yml,md}": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
     "@chakra-ui/anatomy": "^2.2.0",
     "@chakra-ui/gatsby-plugin": "^3.1.3",
@@ -77,9 +88,11 @@
     "gatsby-plugin-manifest": "^5.12.0",
     "jest": "^28.1.3",
     "jest-it-up": "^2.0.2",
+    "lint-staged": "^14.0.1",
     "node-fetch-cache": "^3.1.3",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.3.0",
+    "simple-git-hooks": "^2.9.0",
     "ts-jest": "^28.0.7",
     "typescript": "~4.8.4"
   },
@@ -103,7 +116,8 @@
       "gatsby>lmdb>msgpackr>msgpackr-extract": false,
       "gatsby>memoizee>es5-ext": false,
       "gatsby-plugin-manifest>sharp": true,
-      "@lingui/cli>esbuild": false
+      "@lingui/cli>esbuild": false,
+      "simple-git-hooks": true
     }
   }
 }
