--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@lavamoat/preinstall-always-fail": "^1.0.0",
     "@lingui/cli": "^4.4.2",
     "@lingui/conf": "^4.4.2",
+    "@lingui/format-po": "^4.4.2",
     "@metamask/eslint-config": "^12.0.0",
     "@metamask/eslint-config-browser": "^12.0.0",
     "@metamask/eslint-config-jest": "^12.0.0",
