--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "@metamask/snaps-controllers": "^1.0.2",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.12.3",
+    "gatsby-plugin-image": "^3.12.0",
+    "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-source-filesystem": "^5.12.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.11",
     "react": "^18.2.0",
