--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "fast-deep-equal": "^3.1.3",
     "gatsby-plugin-fusejs": "^2.0.2",
     "gatsby-plugin-manifest": "^5.12.0",
     "jest": "^28.1.3",
