Add SEO images and improve tags

--- a/package.json
+++ b/package.json
@@ -91,14 +91,20 @@
     "fast-deep-equal": "^3.1.3",
     "gatsby-plugin-fusejs": "^2.0.2",
     "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-source-filesystem": "^5.12.0",
+    "gatsby-transformer-sharp": "^5.12.0",
     "jest": "^28.1.3",
     "jest-it-up": "^2.0.2",
+    "jimp": "^0.22.10",
     "lint-staged": "^14.0.1",
     "node-fetch-cache": "^3.1.3",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.3.0",
+    "sharp": "^0.32.5",
     "simple-git-hooks": "^2.9.0",
     "ts-jest": "^28.0.7",
+    "ts-node": "^10.9.1",
     "typescript": "~4.8.4"
   },
   "packageManager": "yarn@3.6.3",
