--- a/package.json
+++ b/package.json
@@ -46,12 +46,11 @@
     "@lingui/core": "^4.4.2",
     "@lingui/macro": "^4.4.2",
     "@lingui/react": "^4.4.2",
+    "@metamask/logo": "^3.1.1",
     "@metamask/providers": "^11.1.1",
     "@metamask/snaps-controllers": "^1.0.2",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.12.3",
-    "gatsby-plugin-image": "^3.12.0",
-    "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-source-filesystem": "^5.12.0",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.11",
