--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@lingui/core": "^4.4.2",
     "@lingui/macro": "^4.4.2",
     "@lingui/react": "^4.4.2",
+    "@loadable/component": "^5.15.3",
     "@metamask/logo": "^3.1.1",
     "@metamask/providers": "^11.1.1",
     "@metamask/snaps-controllers": "^1.0.2",
@@ -70,6 +71,7 @@
     "@metamask/eslint-config-jest": "^12.0.0",
     "@metamask/eslint-config-nodejs": "^12.0.0",
     "@metamask/eslint-config-typescript": "^12.0.0",
+    "@types/loadable__component": "^5.13.5",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
