--- a/.depcheckrc.json
+++ b/.depcheckrc.json
@@ -9,6 +9,7 @@
     "@yarnpkg/*",
     "clipanion",
     "gatsby-plugin-*",
+    "gatsby-transformer-*",
     "prettier-plugin-packagejson",
     "simple-git-hooks",
     "ts-node",
