--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "snaps-discover",
+  "name": "@metamask/snaps-directory",
   "version": "1.0.0",
   "private": true,
-  "description": "snaps-discover",
+  "description": "Discover and customize your web3 experience with the MetaMask Snaps Directory. Explore various community Snaps to enhance your web3 interactions and unlock new possibilities.",
   "keywords": [
     "gatsby"
   ],
@@ -91,12 +91,17 @@
     "fast-deep-equal": "^3.1.3",
     "gatsby-plugin-fusejs": "^2.0.2",
     "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-source-filesystem": "^5.12.0",
+    "gatsby-transformer-sharp": "^5.12.0",
     "jest": "^28.1.3",
     "jest-it-up": "^2.0.2",
+    "jimp": "^0.22.10",
     "lint-staged": "^14.0.1",
     "node-fetch-cache": "^3.1.3",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.3.0",
+    "sharp": "^0.32.5",
     "simple-git-hooks": "^2.9.0",
     "ts-jest": "^28.0.7",
     "typescript": "~4.8.4"
