Fix Slack announcement

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -30,14 +30,14 @@ jobs:
       - uses: actions/checkout@v3
       - id: name-version
         shell: bash
-        if: inputs.slack-webhook-url != ''
+        if: inputs.slack-subteam != ''
         run: |
           NAME_VERSION_TEXT=$(jq --raw-output '.name + "@" + .version' package.json )
           NAME_VERSION_TEXT_STRIPPED="${NAME_VERSION_TEXT#@}"
           echo "NAME_VERSION=$NAME_VERSION_TEXT_STRIPPED" >> "$GITHUB_OUTPUT"
       - id: final-text
         shell: bash
-        if: inputs.slack-webhook-url != ''
+        if: inputs.slack-subteam != ''
         run: |
           DEFAULT_TEXT="\`${{ steps.name-version.outputs.NAME_VERSION }}\` is awaiting deployment :rocket: \n <https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}/|→ Click here to review deployment>"
           SUBTEAM_TEXT="${{ inputs.subteam }}"
