--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "gatsby"
   ],
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "https://github.com/MetaMask/snaps-directory.git"
   },
   "scripts": {
     "build": "yarn lang:compile && gatsby build",
@@ -66,6 +67,7 @@
     "@lingui/cli": "^4.4.2",
     "@lingui/conf": "^4.4.2",
     "@lingui/format-po": "^4.4.2",
+    "@metamask/auto-changelog": "^3.2.0",
     "@metamask/eslint-config": "^12.0.0",
     "@metamask/eslint-config-browser": "^12.0.0",
     "@metamask/eslint-config-jest": "^12.0.0",
