--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [
     "gatsby"
   ],
+  "homepage": "https://github.com/MetaMask/snaps-directory#readme",
   "repository": {
     "type": "git",
     "url": "https://github.com/MetaMask/snaps-directory.git"
