--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -6,6 +6,9 @@ on:
       destination_dir:
         required: true
         type: string
+      ref:
+        required: false
+        type: string
 
 jobs:
   publish-site-to-gh-pages:
@@ -20,6 +23,8 @@ jobs:
         run: exit 1
       - name: Checkout the repository
         uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.ref || github.sha }}
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
