--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "@metamask/snaps-controllers": "^1.0.2",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.12.3",
+    "linkify-react": "^4.1.1",
+    "linkifyjs": "^4.1.1",
     "lodash": "^4.17.21",
     "node-fetch": "^2.6.11",
     "react": "^18.2.0",
@@ -75,6 +77,8 @@
     "@metamask/eslint-config-jest": "^12.0.0",
     "@metamask/eslint-config-nodejs": "^12.0.0",
     "@metamask/eslint-config-typescript": "^12.0.0",
+    "@metamask/snaps-registry": "^2.0.0",
+    "@metamask/snaps-utils": "^1.0.2",
     "@types/loadable__component": "^5.13.5",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
@@ -135,7 +139,9 @@
       "@lingui/cli>esbuild": false,
       "simple-git-hooks": true,
       "gatsby-plugin-sharp>sharp": true,
-      "sharp": true
+      "sharp": true,
+      "@metamask/snaps-utils>@metamask/permission-controller>@metamask/controller-utils>ethereumjs-util>ethereum-cryptography>keccak": false,
+      "@metamask/snaps-utils>@metamask/permission-controller>@metamask/controller-utils>ethereumjs-util>ethereum-cryptography>secp256k1": false
     }
   }
 }
