Add segment key to GitHub actions

--- a/.github/workflows/publish-site.yml
+++ b/.github/workflows/publish-site.yml
@@ -29,6 +29,8 @@ jobs:
         run: yarn --immutable
       - name: Run build script
         run: yarn build
+        env:
+          SEGMENT_PRODUCTION_WRITE_KEY: ${{ secrets.SEGMENT_PRODUCTION_WRITE_KEY }}
       - name: Deploy to `${{ inputs.destination_dir }}` directory of `gh-pages` branch
         uses: peaceiris/actions-gh-pages@de7ea6f8efb354206b205ef54722213d99067935
         with:
