--- a/.github/workflows/build-lint-test.yml
+++ b/.github/workflows/build-lint-test.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            .cache/npm
+            node_modules/.cache/npm
           key: npm-tarballs-${{ github.run_id }}
           restore-keys: |
             npm-tarballs
