--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -23,6 +23,8 @@ on:
         required: false
       PUBLISH_PAGES_TOKEN:
         required: true
+      SEGMENT_PRODUCTION_WRITE_KEY:
+        required: true
 
 jobs:
   announce-release:
@@ -96,3 +98,4 @@ jobs:
       destination_dir: .
     secrets:
       PUBLISH_PAGES_TOKEN: ${{ secrets.PUBLISH_PAGES_TOKEN }}
+      SEGMENT_PRODUCTION_WRITE_KEY: ${{ secrets.SEGMENT_PRODUCTION_WRITE_KEY }}
