--- a/.github/workflows/republish-release.yml
+++ b/.github/workflows/republish-release.yml
@@ -107,3 +107,6 @@ jobs:
     with:
       destination_dir: .
       ref: ${{ needs.get-release-tag.outputs.tag }}
+    secrets:
+      PUBLISH_PAGES_TOKEN: ${{ secrets.PUBLISH_PAGES_TOKEN }}
+      SEGMENT_PRODUCTION_WRITE_KEY: ${{ secrets.SEGMENT_PRODUCTION_WRITE_KEY }}
