--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,3 +75,5 @@ jobs:
       slack-subteam: S042S7RE4AE # @metamask-npm-publishers
     secrets:
       SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+      PUBLISH_PAGES_TOKEN: ${{ secrets.PUBLISH_PAGES_TOKEN }}
+      SEGMENT_PRODUCTION_WRITE_KEY: ${{ secrets.SEGMENT_PRODUCTION_WRITE_KEY }}
