--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -21,6 +21,10 @@ on:
     secrets:
       SLACK_WEBHOOK_URL:
         required: false
+      PUBLISH_PAGES_TOKEN:
+        required: true
+      SEGMENT_PRODUCTION_WRITE_KEY:
+        required: true
 
 jobs:
   announce-release:
@@ -92,3 +96,6 @@ jobs:
     uses: ./.github/workflows/publish-site.yml
     with:
       destination_dir: .
+    secrets:
+      PUBLISH_PAGES_TOKEN: ${{ secrets.PUBLISH_PAGES_TOKEN }}
+      SEGMENT_PRODUCTION_WRITE_KEY: ${{ secrets.SEGMENT_PRODUCTION_WRITE_KEY }}
