--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "fast-deep-equal": "^3.1.3",
     "gatsby-plugin-fusejs": "^2.0.2",
     "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-segment-js": "^5.0.0",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-sitemap": "^6.12.0",
