Swap out Recoil for Redux + RTK Query

--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
     "@lingui/core": "^4.4.2",
     "@lingui/macro": "^4.4.2",
     "@lingui/react": "^4.4.2",
-    "@loadable/component": "^5.15.3",
     "@metamask/logo": "^3.1.1",
     "@metamask/providers": "^13.0.0",
     "@metamask/snaps-controllers": "^2.0.0",
+    "@reduxjs/toolkit": "^1.9.6",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.12.3",
     "linkify-react": "^4.1.1",
@@ -64,8 +64,9 @@
     "node-fetch": "^2.6.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-use-fusejs": "^2.0.2",
-    "recoil": "^0.7.7",
+    "redux": "^4.2.1",
     "semver": "^7.5.4"
   },
   "devDependencies": {
@@ -83,7 +84,6 @@
     "@metamask/eslint-config-typescript": "^12.0.0",
     "@metamask/snaps-registry": "^2.0.0",
     "@metamask/snaps-utils": "^2.0.0",
-    "@types/loadable__component": "^5.13.5",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
