--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@metamask/logo": "^3.1.1",
     "@metamask/providers": "^13.0.0",
     "@metamask/snaps-controllers": "^2.0.0",
+    "@metamask/utils": "^8.1.0",
     "@reduxjs/toolkit": "^1.9.6",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.12.3",
