--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@chakra-ui/anatomy": "^2.2.0",
     "@chakra-ui/gatsby-plugin": "^3.1.3",
     "@chakra-ui/react": "^2.8.0",
+    "@chakra-ui/styled-system": "^2.9.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@lingui/core": "^4.4.2",
