--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@metamask/eslint-config-typescript": "^12.0.0",
     "@metamask/snaps-registry": "^2.0.0",
     "@metamask/snaps-utils": "^2.0.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
