--- a/package.json
+++ b/package.json
@@ -72,6 +72,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
+    "@jest/globals": "^29.7.0",
+    "@jest/types": "^29.6.3",
     "@lavamoat/allow-scripts": "^2.3.1",
     "@lavamoat/preinstall-always-fail": "^1.0.0",
     "@lingui/cli": "^4.4.2",
