--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@metamask/snaps-registry": "^2.0.0",
     "@metamask/snaps-utils": "^2.0.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/jest-when": "^3.5.3",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -115,6 +116,7 @@
     "gatsby-transformer-sharp": "^5.12.0",
     "jest": "^28.1.3",
     "jest-it-up": "^2.0.2",
+    "jest-when": "^3.6.0",
     "jimp": "^0.22.10",
     "lint-staged": "^14.0.1",
     "node-fetch-cache": "^3.1.3",
