--- a/package.json
+++ b/package.json
@@ -73,7 +73,6 @@
   "devDependencies": {
     "@babel/core": "^7.22.11",
     "@jest/globals": "^29.7.0",
-    "@jest/types": "^29.6.3",
     "@lavamoat/allow-scripts": "^2.3.1",
     "@lavamoat/preinstall-always-fail": "^1.0.0",
     "@lingui/cli": "^4.4.2",
@@ -94,6 +93,7 @@
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "babel-jest": "^29.7.0",
     "depcheck": "^1.4.3",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
@@ -124,7 +124,6 @@
     "prettier-plugin-packagejson": "^2.3.0",
     "sharp": "^0.32.5",
     "simple-git-hooks": "^2.9.0",
-    "ts-jest": "^28.0.7",
     "typescript": "~4.8.4"
   },
   "packageManager": "yarn@3.6.3",
