--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@metamask/snaps-registry": "^2.0.0",
     "@metamask/snaps-utils": "^2.0.0",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/react": "^14.0.0",
     "@types/jest-when": "^3.5.3",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
@@ -115,6 +116,7 @@
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
     "jest": "^28.1.3",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-it-up": "^2.0.2",
     "jest-when": "^3.6.0",
     "jimp": "^0.22.10",
