--- a/.babelrc.json
+++ b/.babelrc.json
@@ -1,3 +1,11 @@
 {
-  "presets": ["@babel/preset-typescript", "babel-preset-gatsby"]
+  "presets": [
+    "@babel/preset-typescript",
+    [
+      "babel-preset-gatsby",
+      {
+        "reactRuntime": "automatic"
+      }
+    ]
+  ]
 }
