--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "@metamask/snaps-registry": "^2.0.0",
     "@metamask/snaps-utils": "^2.0.0",
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest-when": "^3.5.3",
     "@types/node": "^20.3.3",
@@ -100,6 +101,7 @@
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.2",
+    "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-jsdoc": "^39.9.1",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-prettier": "^4.2.1",
