--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "fast-deep-equal": "^3.1.3",
+    "fuse.js": "^6.6.2",
     "gatsby-plugin-fusejs": "^2.0.2",
     "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
