--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/jest-image-snapshot": "^6.2.1",
     "@types/jest-when": "^3.5.3",
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
@@ -120,6 +121,7 @@
     "gatsby-transformer-sharp": "^5.12.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-image-snapshot": "^6.2.0",
     "jest-it-up": "^2.0.2",
     "jest-when": "^3.6.0",
     "jimp": "^0.22.10",
