--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@lingui/macro": "^4.4.2",
     "@lingui/react": "^4.4.2",
     "@metamask/logo": "^3.1.1",
-    "@metamask/providers": "^13.0.0",
-    "@metamask/snaps-controllers": "^3.0.0",
+    "@metamask/providers": "^13.1.0",
+    "@metamask/snaps-controllers": "^3.1.0",
     "@metamask/utils": "^8.1.0",
     "@reduxjs/toolkit": "^1.9.6",
     "framer-motion": "^10.16.2",
@@ -85,12 +85,12 @@
     "@lingui/cli": "^4.4.2",
     "@lingui/conf": "^4.4.2",
     "@lingui/format-po": "^4.4.2",
-    "@metamask/auto-changelog": "^3.2.0",
-    "@metamask/eslint-config": "^12.0.0",
-    "@metamask/eslint-config-browser": "^12.0.0",
-    "@metamask/eslint-config-jest": "^12.0.0",
-    "@metamask/eslint-config-nodejs": "^12.0.0",
-    "@metamask/eslint-config-typescript": "^12.0.0",
+    "@metamask/auto-changelog": "^3.4.2",
+    "@metamask/eslint-config": "^12.2.0",
+    "@metamask/eslint-config-browser": "^12.1.0",
+    "@metamask/eslint-config-jest": "^12.1.0",
+    "@metamask/eslint-config-nodejs": "^12.1.0",
+    "@metamask/eslint-config-typescript": "^12.1.0",
     "@metamask/snaps-registry": "^2.1.0",
     "@metamask/snaps-utils": "^3.0.0",
     "@svgr/webpack": "^8.1.0",
@@ -107,7 +107,7 @@
     "depcheck": "^1.4.3",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "~2.26.0",
     "eslint-plugin-jest": "^27.2.2",
     "eslint-plugin-jest-dom": "^5.1.0",
     "eslint-plugin-jsdoc": "^39.9.1",
