--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,9 @@ jobs:
   publish-staging:
     name: Publish staging site
     uses: ./.github/workflows/publish-staging.yml
+    permissions:
+      contents: read
+      pull-requests: write
     secrets:
       PUBLISH_STAGING_PAGES_TOKEN: ${{ secrets.PUBLISH_STAGING_PAGES_TOKEN }}
 
