--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@noble/hashes@~1.1.1": "patch:@noble/hashes@npm%3A1.3.2#./.yarn/patches/@noble-hashes-npm-1.3.2-1e619f9da0.patch",
     "@noble/hashes@~1.3.0": "patch:@noble/hashes@npm%3A1.3.2#./.yarn/patches/@noble-hashes-npm-1.3.2-1e619f9da0.patch",
     "@noble/hashes@~1.3.1": "patch:@noble/hashes@npm%3A1.3.2#./.yarn/patches/@noble-hashes-npm-1.3.2-1e619f9da0.patch",
+    "assert@^2.1.0": "patch:assert@npm%3A2.1.0#./.yarn/patches/assert-npm-2.1.0-2ed7bbc82f.patch",
     "xml2js": "^0.5.0"
   },
   "dependencies": {
@@ -59,11 +60,20 @@
     "@lingui/core": "^4.4.2",
     "@lingui/macro": "^4.4.2",
     "@lingui/react": "^4.4.2",
+    "@metamask/base-controller": "^4.0.0",
+    "@metamask/eth-json-rpc-middleware": "^12.0.1",
+    "@metamask/json-rpc-engine": "^7.3.0",
+    "@metamask/json-rpc-middleware-stream": "^6.0.0",
+    "@metamask/key-tree": "^9.0.0",
     "@metamask/logo": "^3.1.1",
+    "@metamask/permission-controller": "^6.0.0",
     "@metamask/providers": "^14.0.0",
-    "@metamask/snaps-controllers": "^3.0.0",
+    "@metamask/snaps-controllers": "3.4.1",
+    "@metamask/snaps-execution-environments": "^3.4.2",
+    "@metamask/snaps-rpc-methods": "^4.0.3",
+    "@metamask/snaps-sdk": "^1.3.1",
     "@metamask/utils": "^8.1.0",
-    "@reduxjs/toolkit": "^1.9.6",
+    "@reduxjs/toolkit": "^2.0.1",
     "framer-motion": "^10.16.2",
     "gatsby": "^5.12.3",
     "linkify-react": "^4.1.1",
@@ -74,8 +84,11 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-use-fusejs": "^2.0.2",
+    "readable-stream": "^4.5.1",
     "redux": "^4.2.1",
-    "semver": "^7.5.4"
+    "redux-saga": "^1.2.3",
+    "semver": "^7.5.4",
+    "superstruct": "^1.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.22.11",
@@ -92,7 +105,7 @@
     "@metamask/eslint-config-nodejs": "^12.0.0",
     "@metamask/eslint-config-typescript": "^12.0.0",
     "@metamask/snaps-registry": "^3.0.0",
-    "@metamask/snaps-utils": "^5.0.0",
+    "@metamask/snaps-utils": "^5.1.0",
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
@@ -101,6 +114,7 @@
     "@types/node": "^20.3.3",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "@types/readable-stream": "^4.0.10",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
     "babel-jest": "^29.7.0",
@@ -134,6 +148,7 @@
     "jimp": "^0.22.10",
     "lint-staged": "^14.0.1",
     "node-fetch-cache": "^3.1.3",
+    "node-polyfill-webpack-plugin": "^3.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.3.0",
     "sharp": "^0.32.5",
