Show permissions on Snap details page (#255)
This adds permissions to the Snap details page.

--- a/package.json
+++ b/package.json
@@ -61,11 +61,13 @@
     "@lingui/react": "^4.4.2",
     "@metamask/logo": "^3.1.1",
     "@metamask/providers": "^14.0.0",
+    "@metamask/slip44": "^3.1.0",
     "@metamask/snaps-controllers": "^5.0.0",
+    "@metamask/snaps-sdk": "^2.0.0",
     "@metamask/utils": "^8.1.0",
     "@reduxjs/toolkit": "^1.9.6",
     "framer-motion": "^10.16.2",
-    "gatsby": "^5.12.3",
+    "gatsby": "^5.12.12",
     "linkify-react": "^4.1.1",
     "linkifyjs": "^4.1.1",
     "lodash": "^4.17.21",
@@ -126,6 +128,7 @@
     "gatsby-plugin-sitemap": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
+    "graphql-type-json": "^0.3.2",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.7.0",
     "jest-image-snapshot": "^6.2.0",
