--- a/.github/workflows/republish-release.yml
+++ b/.github/workflows/republish-release.yml
@@ -46,7 +46,7 @@ jobs:
     needs:
       - get-release-tag
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           ref: ${{ needs.get-release-tag.outputs.tag }}
       - id: name-version
@@ -102,11 +102,11 @@ jobs:
       - get-release-tag
       - publish-release
     permissions:
-      contents: write
+      contents: read
+      pages: write
+      id-token: write
     uses: ./.github/workflows/publish-site.yml
     with:
-      destination_dir: .
       ref: ${{ needs.get-release-tag.outputs.tag }}
     secrets:
-      PUBLISH_PAGES_TOKEN: ${{ secrets.PUBLISH_PAGES_TOKEN }}
       SEGMENT_PRODUCTION_WRITE_KEY: ${{ secrets.SEGMENT_PRODUCTION_WRITE_KEY }}
